feat(server): configuration page for appearance/sync/data source

--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_zh_CN.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_zh_CN.properties
@@ -4,3 +4,9 @@ pictures=图床
 site_title=网站名称
 submit=提交
 github_url=Github地址
+sync=同步
+data_source=数据源
+cron_expr=CRON 表达式
+source_type=数据源类型
+source_url=数据源地址
+source_token=数据源凭证
