--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
@@ -4,3 +4,10 @@ pictures=Pictures
 site_title=Site Title
 submit=Submit
 github_url=Github URL
+sync=Synchronous
+data_source=Data Source
+cron_expr=CRON Expression
+source_type=Source Type
+source_url=Source Url
+source_token=Source Token
+
