feat(server): implement article repo synchronous

--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
@@ -4,10 +4,23 @@ pictures=Pictures
 site_title=Site Title
 submit=Submit
 github_url=Github URL
-sync=Synchronous
 data_source=Data Source
 cron_expr=CRON Expression
 source_type=Source Type
 source_url=Source Url
 source_token=Source Token
+username=User Name
+password=Password
+username_placeholder=Enter Username
+password_placeholder=Enter Password
+username_or_password_error=Username or password is incorrect
+required_username_or_password=Username or password is required
+account_locked=Your account has been locked. Please try again after 1 hour.
+logout=Logout
 
+
+sync=Synchronous
+sync_log=Synchronous Log
+sync_operate=Synchronous Operate
+sync_start=Start Synchronous
+sync_stop=Stop Synchronous
