--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_zh_CN.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_zh_CN.properties
@@ -4,9 +4,22 @@ pictures=图床
 site_title=网站名称
 submit=提交
 github_url=Github地址
-sync=同步
 data_source=数据源
 cron_expr=CRON 表达式
 source_type=数据源类型
 source_url=数据源地址
 source_token=数据源凭证
+username=用户名
+password=密码
+username_placeholder=请输入用户名
+password_placeholder=请输入密码
+username_or_password_error=用户名或密码错误
+required_username_or_password=请输入用户名或密码
+account_locked=你的账号已被锁定，请1小时后重试
+logout=登出
+
+sync=同步
+sync_log=同步日志
+sync_operate=同步操作
+sync_start=开始同步
+sync_stop=停止同步
