feat(server,common): update /admin/sync/log page

--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
@@ -24,3 +24,9 @@ sync_log=Synchronous Log
 sync_operate=Synchronous Operate
 sync_start=Start Synchronous
 sync_stop=Stop Synchronous
+
+
+id=ID
+callback_url=Callback Url
+status=Status
+created_at=Created At
