feat(server): add config item branch, add log list page

--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_zh_CN.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_zh_CN.properties
@@ -6,9 +6,12 @@ submit=提交
 github_url=Github地址
 data_source=数据源
 cron_expr=CRON 表达式
+
 source_type=数据源类型
 source_url=数据源地址
 source_token=数据源凭证
+source_branch=分支名称
+
 username=用户名
 password=密码
 username_placeholder=请输入用户名
