--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
@@ -6,9 +6,12 @@ submit=Submit
 github_url=Github URL
 data_source=Data Source
 cron_expr=CRON Expression
+
 source_type=Source Type
 source_url=Source Url
 source_token=Source Token
+source_branch=Branch
+
 username=User Name
 password=Password
 username_placeholder=Enter Username
