feat(server): add article detail page

--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_en.properties
@@ -28,9 +28,29 @@ sync_operate=Synchronous Operate
 sync_start=Start Synchronous
 sync_stop=Stop Synchronous
 
-
+# table column
 id=ID
 callback_url=Callback Url
 status=Status
 created_at=Created At
 detail=Detail
+
+column_id=ID
+column_identifier=标识符
+column_detail=Detail
+column_status=Status
+column_title=Title
+column_summary=Summary
+column_updated_at=Updated At
+column_created_at=Created At
+column_cover=Cover
+# table column
+
+next_page=Next Page
+prev_page=Preview Page
+
+article=Article
+article_detail=Detail
+article_statistic=Statistic
+article_history=History
+
