--- a/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_zh_CN.properties
+++ b/server/src/main/i18n/dev/yidafu/blog/i18n/AdminTxt_zh_CN.properties
@@ -27,9 +27,27 @@ sync_operate=同步操作
 sync_start=开始同步
 sync_stop=停止同步
 
-
+# table column
 id=ID
 callback_url=回调地址
 status=状态
 created_at=创建时间
 detail=详情
+column_id=ID
+column_identifier=标识符
+column_detail=详情
+column_status=状态
+column_title=标题
+column_summary=简介
+column_updated_at=更新时间
+column_created_at=创建时间
+column_cover=封面
+# table column
+
+next_page=下一页
+prev_page=上一页
+
+article=文章
+article_detail=文章详情
+article_statistic=文章统计
+article_history=文章历史
